--- a/assets/css/game1.css
+++ b/assets/css/game1.css
@@ -45,3 +45,14 @@ body {
     font-size: 16px;
     font-weight: bold;
 }
+
+#score {
+  font-size: 24px;
+  font-weight: bold;
+  color: springgreen;
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 0.5rem;
+
+}
