--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: linear-gradient(to bottom, #3498db, #2c3e50);
+  background: url("/assets/img/wallpaper.jpg");
   display: flex;
   height: 100vh;
   width: 100vw;
@@ -33,6 +33,7 @@ body {
   text-align: center;
   margin-bottom: 20px;
   background-color: aliceblue;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   display: flex;
   justify-content: center;
   width: 50%;
