--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: url("./assets/img/wallpaper.jpg");
+  background: url("../assets/img/wallpaper.jpg");
   display: flex;
   height: 100vh;
   width: 100vw;
@@ -24,7 +24,7 @@ body {
     flex-wrap: wrap;
     padding: 15px;
     border-radius: 1rem;
-    width: 50%;
+    width: 60%;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
@@ -36,7 +36,7 @@ body {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   display: flex;
   justify-content: center;
-  width: 50%;
+  width: 60%;
   border-radius: 1rem;
   padding: 1.5rem;
   gap: 0.5rem;
